# zk-light-clients

./: .gitignore  .gitmodules  Cargo.toml  README.md  ThirdPartyNotices.txt  deny.toml
aptos/: Cargo.toml  LICENSE.md  README.md  e2e_bench.sh  rust-toolchain.toml
aptos/.cargo/: config  config.toml
aptos/aptos-programs/: Cargo.toml  Makefile  README.md  build.rs
aptos/aptos-programs/artifacts/: bits-parser-program  bytes-program  epoch-change-program  inclusion-program  merkle-program  ratchet-program  signature-verification-program
aptos/aptos-programs/artifacts/benchmarks/: bytes-program  signature-verification-program
aptos/aptos-programs/src/: lib.rs
aptos/core/: Cargo.toml  README.md
aptos/core/src/: lib.rs
aptos/core/src/aptos_test_utils/: error.rs  mod.rs  wrapper.rs
aptos/core/src/crypto/: error.rs  hash.rs  mod.rs  sig.rs
aptos/core/src/merkle/: mod.rs  node.rs  proof.rs  sparse_proof.rs  transaction_proof.rs
aptos/core/src/types/: block_info.rs  epoch_state.rs  error.rs  ledger_info.rs  mod.rs  transaction.rs  trusted_state.rs  utils.rs  validator.rs  waypoint.rs
aptos/docker/: .example.env  Dockerfile  README.md  docker-compose.yml
aptos/docker/k8s/: README.md  client-deployment.yaml  client-service.yaml  server-primary-deployment.yaml  server-primary-service.yaml  server-secondary-deployment.yaml
aptos/docs/: book.toml
aptos/docs/src/: README.md  SUMMARY.md
aptos/docs/src/benchmark/: configuration.md  e2e.md  on_chain.md  overview.md  proof.md
aptos/docs/src/components/: aptos_pfn.md  client.md  overview.md  proof_server.md
aptos/docs/src/design/: edge_cases.md  epoch_change_proof.md  inclusion_proof.md  overview.md  security.md
aptos/docs/src/misc/: release.md
aptos/docs/src/run/: configuration.md  overview.md  setup_aptos_pfn.md  setup_client.md  setup_proof_server.md
aptos/light-client/: Cargo.toml  Makefile
aptos/light-client/benches/: bytes.rs  bytes_base.rs  e2e.rs  e2e_prod.rs  epoch_change.rs  execute.rs  inclusion.rs  merkle.rs  merkle_base.rs  ratchet.rs  ratchet_prod.rs  sig.rs  sig_prod.rs
aptos/light-client/benches/bytes/: Cargo.toml
aptos/light-client/benches/e2e/: Cargo.toml
aptos/light-client/benches/merkle/: Cargo.toml
aptos/light-client/benches/ratchet/: Cargo.toml
aptos/light-client/benches/sig/: Cargo.toml
aptos/light-client/src/: epoch_change.rs  error.rs  inclusion.rs  lib.rs  merkle.rs  parser.rs  ratchet.rs  sig.rs
aptos/programs/benchmarks/bytes/: Cargo.toml
aptos/programs/benchmarks/signature-verification/: Cargo.toml
aptos/programs/bits-parser/: Cargo.toml
aptos/programs/bytes/: Cargo.toml
aptos/programs/epoch-change/: Cargo.toml
aptos/programs/inclusion/: Cargo.toml
aptos/programs/merkle/: Cargo.toml
aptos/programs/ratchet/: Cargo.toml
aptos/programs/signature-verification/: Cargo.toml
aptos/proof-server/: Cargo.toml  README.md
aptos/proof-server/benches/: proof_server.rs
aptos/proof-server/src/: error.rs  lib.rs  utils.rs
aptos/server/: Cargo.toml  README.md
aptos/server/src/: lib.rs  main.rs
aptos/solidity/: README.md
aptos/solidity/contracts/: README.md  foundry.toml  remappings.txt
aptos/solidity/contracts-generator/: Cargo.toml
aptos/solidity/fixture-generator/: Cargo.toml
aptos/src/: lib.rs
aptos/src/crypto/: error.rs  hash.rs  mod.rs  sig.rs
aptos/src/merkle/: node.rs
aptos/src/types/: block_info.rs  epoch_state.rs  ledger_info.rs  mod.rs  trusted_state.rs  validator.rs  waypoint.rs
aptos/src/unit_tests/: mod.rs
ethereum/: Cargo.toml  LICENSE.md  README.md  rust-toolchain.toml
ethereum/.cargo/: config.toml
ethereum/core/: Cargo.toml  README.md
ethereum/core/src/: lib.rs  test_utils.rs
ethereum/docs/: book.toml
ethereum/docs/src/: README.md  SUMMARY.md
ethereum/ethereum-programs/: Cargo.toml  Makefile  README.md  build.rs
ethereum/ethereum-programs/artifacts/: committee-change-program  inclusion-program
ethereum/ethereum-programs/src/: lib.rs
ethereum/light-client/: Cargo.toml  Makefile
ethereum/light-client/benches/: committee_change.rs  inclusion.rs
ethereum/light-client/src/: lib.rs  test_utils.rs  utils.rs
ethereum/move/: Move.toml  README.md
ethereum/move/.aptos/: config.yaml
ethereum/move/sources/: plonk_verifier.move  script.move  utilities.move  wrapper.move
ethereum/pact/: .pact-history  test.repl  verifier.pact
ethereum/pact/fixtures/: epoch_change_fixture.json  inclusion_fixture.json
ethereum/programs/committee-change/: Cargo.toml
ethereum/programs/inclusion/: Cargo.toml
ethereum/test-assets/: BeaconBlockHeaderDeneb.ssz  ExecutionPayloadHeaderDeneb.ssz  LightClientBootstrapDeneb.ssz  LightClientFinalityUpdateDeneb.ssz  LightClientHeaderDeneb.ssz  LightClientUpdateNewPeriodDeneb.ssz  SyncCommitteeDeneb.ssz
ethereum/test-assets/base-data/: BootstrapDeneb.json  FinalityUpdateDeneb.json  UpdateDeneb.json  UpdateNewPeriodDeneb.json
ethereum/test-assets/committee-change/: LightClientUpdateDeneb.ssz  SyncAggregateDeneb.ssz
ethereum/test-assets/inclusion/: LightClientBootstrapDeneb.ssz  LightClientFinalityUpdateDeneb.ssz  LightClientUpdateDeneb.ssz
fixture-generator/: Cargo.toml  rust-toolchain.toml
fixture-generator/.cargo/: config.toml
kadena/: Cargo.toml  LICENSE.md  README.md  rust-toolchain.toml
kadena/.cargo/: config.toml
kadena/core/: Cargo.toml
kadena/core/src/: lib.rs  test_utils.rs
kadena/docs/: book.toml
kadena/docs/src/: README.md  SUMMARY.md
kadena/kadena-programs/: Cargo.toml
kadena/kadena-programs/artifacts/: block-header-hashing-program  longest-chain-program  spv-program
kadena/kadena-programs/src/: lib.rs
kadena/light-client/: Cargo.toml  Makefile
kadena/light-client/benches/: longest_chain.rs  spv.rs
kadena/light-client/src/: lib.rs
kadena/pact/: verifier.pact
kadena/programs/block-header-hashing/: Cargo.toml
kadena/programs/longest-chain/: Cargo.toml
kadena/programs/spv/: Cargo.toml
kadena/solidity/: README.md
kadena/test-assets/: compact.json  epoch_change_kadena_layer_headers.json  kadena_layer_headers.json  spv.json
(+225 files in other folders)
