[workspace]
resolver = "2"

members = [
    "core",
    "light-client",
    "aptos-programs",
    "programs/*"
]

# Match the forks used by the aptos crates
[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
# WP1 patch
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
