[workspace]
resolver = "2"

members = [
    "core",
    "light-client",
    "aptos-programs",
    "proof-server",
]

[workspace.package]
edition = "2021"
license = "BUSL-1.1"
repository = "https://github.com/lurk-lab/zk-light-clients"

[workspace.dependencies]
anyhow = "1.0.79"
aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.14.0" }
aptos-executor = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.14.0" }
aptos-executor-test-helpers = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.14.0" }
aptos-executor-types = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.14.0" }
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.14.0" }
aptos-storage-interface = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.14.0" }
aptos-temppath = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.14.0" }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.14.0" }
aptos-vm = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.14.0" }
aptos-vm-genesis = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.14.0" }
axum = "0.7.5"
backoff = { version = "0.4.0", features = ["tokio"] }
# From https://github.com/aptos-labs/aptos-core/blob/aptos-node-v1.14.0/Cargo.toml#L485
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
bls12_381 = { git = "https://github.com/lurk-lab/bls12_381.git", branch = "zkvm" }
bytes = "1.5.0"
chrono = "0.4.38"
cfg-if = "1.0.0"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11"
glob = "0.3.1"
getset = "0.1.2"
hex = "0.4.3"
itertools = "0.12.1"
log = "0.4"
move-core-types = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.12.0" }
proptest = { version = "1.4.0" }
rand = "0.7.3"
rand_core = "0.5.1"
reqwest = "0.12.4"
serde = "1.0.193"
serde_bytes = "0.11.6"
serde_json = "1"
sha2 = "0.9"
thiserror = "1.0.58"
tiny-keccak = "2.0.2"
url = "2.5.0"
sphinx-derive = { git = "ssh://git@github.com/lurk-lab/sphinx", branch = "dev" }
sphinx-sdk = { git = "ssh://git@github.com/lurk-lab/sphinx", branch = "dev", features = ["plonk"] }
sphinx-zkvm = { git = "ssh://git@github.com/lurk-lab/sphinx", branch = "dev" }
sphinx-helper = { git = "ssh://git@github.com/lurk-lab/sphinx", branch = "dev" }
sphinx-prover = { git = "ssh://git@github.com/lurk-lab/sphinx", branch = "dev" }
tokio = "1.37"
tokio-stream = "0.1"
alloy-sol-types = "0.7.2"
tracing = "0.1.40"

# Match the forks used by the aptos crates
[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
# Sphinx patch
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-v0.10.8" }
