[workspace]
resolver = "2"

members = ["core", "ethereum-programs", "light-client"]

[workspace.dependencies]
anyhow = "1.0.86"
clap = "4.5.8"
env_logger = "0.11.3"
glob = "0.3.1"
getset = "0.1.2"
log = "0.4.22"
reqwest = "0.12.5"
serde = "1.0.203"
thiserror = "1.0.61"
tokio = "1.38.0"
# Crypto dependencies
bls12_381 = { git = "https://github.com/lurk-lab/bls12_381.git", branch = "zkvm" }
# Sphinx dependencies
sphinx-derive = { git = "ssh://git@github.com/lurk-lab/sphinx", tag = "v1.0.0" }
sphinx-sdk = { git = "ssh://git@github.com/lurk-lab/sphinx", tag = "v1.0.0", features = ["plonk"] }
sphinx-zkvm = { git = "ssh://git@github.com/lurk-lab/sphinx", tag = "v1.0.0" }
sphinx-helper = { git = "ssh://git@github.com/lurk-lab/sphinx", tag = "v1.0.0" }
sphinx-prover = { git = "ssh://git@github.com/lurk-lab/sphinx", tag = "v1.0.0" }

[patch.crates-io]
# Sphinx patch
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-v0.10.8" }
