[workspace]
resolver = "2"

members = ["core", "ethereum-programs", "light-client"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/argumentcomputer/zk-light-clients"

[workspace.dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
backoff = { version = "0.4.0", features = ["tokio"] }
clap = "4.5.8"
env_logger = "0.11.3"
ethereum_ssz = "0.5.4"
ethereum_ssz_derive = "0.5.4"
ethereum-types = "0.14.1"
ethers-core = "2.0.14"
glob = "0.3.1"
getset = "0.1.2"
hex = "0.4.3"
log = "0.4.22"
reqwest = "0.12.5"
serde = "1.0.203"
serde_json = "1.0.120"
sha2 = "0.9"
ssz_types = "0.6"
thiserror = "1.0.61"
tiny-keccak = "2.0.2"
tokio = "1.39.2"
tree_hash = "0.6"
tree_hash_derive = "0.6"
# Crypto dependencies
bls12_381 = { git = "https://github.com/argumentcomputer/bls12_381.git", branch = "zkvm" }
# Sphinx dependencies
sphinx-derive = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
sphinx-sdk = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev", features = ["plonk"] }
sphinx-zkvm = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
sphinx-helper = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
sphinx-prover = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }

[patch.crates-io]
# Sphinx patch
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-v0.10.8" }
