[workspace]
resolver = "2"

members = ["kadena-programs", "core", "light-client"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/argumentcomputer/zk-light-clients"

[workspace.dependencies]
glob = "0.3.1"
getset = "0.1.2"
base64 = "0.22.1"
uint = "0.9.5"
chrono = "0.4.38"
sha2 = "0.9"

# Sphinx dependencies
sphinx-derive = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
sphinx-sdk = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev", features = ["plonk"] }
sphinx-zkvm = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
sphinx-helper = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }

[patch.crates-io]
# Sphinx patch
sha2 = { git = "https://github.com/argumentcomputer/RustCrypto-hashes", branch = "zkvm" }
