[workspace]
resolver = "2"

members = ["kadena-programs", "core", "light-client"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/argumentcomputer/zk-light-clients"

[workspace.dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
chrono = "0.4.38"
getset = "0.1.2"
glob = "0.3.1"
serde = "1.0.209"
serde_json = "1.0.127"
sha2 = "0.9"
thiserror = "1.0.63"
uint = "0.9.5"

# Sphinx dependencies
sphinx-derive = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
sphinx-sdk = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev", features = ["plonk"] }
sphinx-zkvm = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
sphinx-helper = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }

[patch.crates-io]
# Sphinx patch
sha2 = { git = "https://github.com/argumentcomputer/RustCrypto-hashes", branch = "zkvm" }
