[package]
name = "aptos-lc-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/wormhole-foundation/example-zk-light-clients"
repository = "https://github.com/wormhole-foundation/example-zk-light-clients"

[dependencies]
anyhow = "1.0.79"
#From https://github.com/aptos-labs/aptos-core/blob/aptos-node-v1.10.0/Cargo.toml#L467
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
bls12_381 = { git = "https://github.com/lurk-lab/bls12_381.git", branch = "zkvm", features = ["experimental"] }
bytes = { version = "1.5.0", features = ["serde"] }
getset = "0.1.2"
hex = "0.4.3"
itertools = "0.12.1"
serde = "1.0.193"
serde_bytes = "0.11.6"
serde_json = "1"
sha2 = "0.9"
test-strategy = "0.3.1"
thiserror = "1.0.56"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }

# shallow cloning would sure help here https://github.com/rust-lang/cargo/issues/1171
aptos-crypto = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
aptos-executor = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
aptos-executor-test-helpers = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
aptos-executor-types = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
aptos-storage-interface = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
aptos-temppath = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
aptos-types = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
aptos-vm = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
aptos-vm-genesis = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
move-core-types = { git = "https://github.com/aptos-labs/aptos-core/", tag = "aptos-node-v1.10.0", optional = true }
# Versions to fit aptos crate
rand = { version = "0.7.3", optional = true }
rand_core = { version = "0.5.1", optional = true }

[dev-dependencies]
cfg-if = "1.0.0"
reqwest = { version = "0.11.23", features = ["blocking"] }

[features]
default = []
aptos = [
    "dep:aptos-crypto",
    "dep:aptos-executor",
    "dep:aptos-executor-test-helpers",
    "dep:aptos-executor-types",
    "dep:aptos-sdk",
    "dep:aptos-storage-interface",
    "dep:aptos-temppath",
    "dep:aptos-types",
    "dep:aptos-vm",
    "dep:aptos-vm-genesis",
    "dep:move-core-types",
    "dep:rand",
    "dep:rand_core"
]