[package]
name = "aptos-lc-core"
version = "1.0.1"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bcs = { workspace = true }
bls12_381 = { workspace = true, features = ["experimental"] }
bytes = { workspace = true, features = ["serde"] }
cfg-if = { workspace = true }
getset = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tiny-keccak = { workspace = true, features = ["sha3"] }

# shallow cloning would sure help here https://github.com/rust-lang/cargo/issues/1171
aptos-crypto = { workspace = true, optional = true }
aptos-executor = { workspace = true, optional = true }
aptos-executor-test-helpers = { workspace = true, optional = true }
aptos-executor-types = { workspace = true, optional = true }
aptos-sdk = { workspace = true, optional = true }
aptos-storage-interface = { workspace = true, optional = true }
aptos-temppath = { workspace = true, optional = true }
aptos-types = { workspace = true, optional = true }
aptos-vm = { workspace = true, optional = true }
aptos-vm-genesis = { workspace = true, optional = true }
# Versions to fit aptos crate
rand = { workspace = true, optional = true }
rand_core = { workspace = true, optional = true }

[dev-dependencies]
cfg-if = { workspace = true }
proptest = { workspace = true }

[features]
default = []
aptos = [
    "dep:aptos-crypto",
    "dep:aptos-executor",
    "dep:aptos-executor-test-helpers",
    "dep:aptos-executor-types",
    "dep:aptos-sdk",
    "dep:aptos-storage-interface",
    "dep:aptos-temppath",
    "dep:aptos-types",
    "dep:aptos-vm",
    "dep:aptos-vm-genesis",
    "dep:rand",
    "dep:rand_core"
]
waypoint = []