[package]
name = "aptos-lc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# LC crates
aptos-lc-core = { path = "../core" }
aptos-programs = { path = "../aptos-programs" }

# WP1 crates
wp1-sdk = { workspace = true }

#Others
serde = { workspace = true, features = ["derive", "rc"] }
thiserror = { workspace = true }

[dev-dependencies]
aptos-programs = { path = "../aptos-programs", features = ["bench"] }
bcs = { workspace = true }
cfg-if = { workspace = true }

[features]
default = []
aptos = ["aptos-lc-core/aptos"]

[[bench]]
name = "execute"
required-features = []
harness = false

