[package]
name = "aptos-lc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# LC crates
aptos-lc-core = { path = "../core" }
aptos-programs = { path = "../aptos-programs" }

# WP1 crates
wp1-sdk = { workspace = true }

#Others
anyhow = { workspace = true }
getset = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
thiserror = { workspace = true }

[dev-dependencies]
aptos-programs = { path = "../aptos-programs", features = ["bench"] }
bcs = { workspace = true }
cfg-if = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
aptos = ["aptos-lc-core/aptos"]

[[bench]]
name = "inclusion"
required-features = ["aptos"]
harness = false

[[bench]]
name = "bytes"
required-features = ["aptos"]
harness = false

[[bench]]
name = "sig"
required-features = ["aptos"]
harness = false

[[bench]]
name = "epoch_change"
required-features = ["aptos"]
harness = false

[[bench]]
name = "e2e"
required-features = ["aptos"]
harness = false
