[package]
name = "aptos-lc"
version = "1.1.0"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# LC crates
aptos-lc-core = { path = "../core" }
aptos-programs = { path = "../aptos-programs" }

# Sphinx crates
sphinx-sdk = { workspace = true }

#Others
anyhow = { workspace = true }
getset = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
thiserror = { workspace = true }
bcs = { workspace = true }

[dev-dependencies]
aptos-programs = { path = "../aptos-programs", features = ["bench"] }
cfg-if = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = []
aptos = ["aptos-lc-core/aptos"]

[[bench]]
name = "inclusion"
required-features = ["aptos"]
harness = false

[[bench]]
name = "sig"
required-features = ["aptos"]
harness = false

[[bench]]
name = "epoch_change"
required-features = ["aptos"]
harness = false

[[bench]]
name = "e2e"
required-features = ["aptos"]
harness = false
