[package]
name = "proof-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local
aptos-lc = { path = "../light-client" }
aptos-lc-core = { path = "../core", features = ["aptos"] }

# workspace
anyhow = { workspace = true }
bcs = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
url = { workspace = true }
wp1-sdk = { workspace = true }