[package]
name = "proof-server"
version = "1.0.1"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "proof_server"
path = "src/bin/proof_server.rs"

[dependencies]
# local
aptos-lc = { path = "../light-client" }
aptos-lc-core = { path = "../core" }

# workspace
anyhow = { workspace = true }
bcs = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
url = { workspace = true }
sphinx-sdk = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[[bench]]
name = "proof_server"
harness = false
