[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local
aptos-lc = { path = "../light-client" }

# workspace
anyhow = { workspace = true }
bcs = { workspace = true }
serde = { workspace = true }
wp1-sdk = { workspace = true }

# other
once_cell = "1.19.0"
tokio = "1.37"
tokio-stream = "0.1"
tonic = "0.8"
tonic-rpc = { version = "0.2", features = ["bincode"] }