[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local
aptos-lc = { path = "../light-client" }

# workspace
anyhow = { workspace = true }
serde = { workspace = true }
wp1-sdk = { workspace = true }

# other
once_cell = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-rpc = { workspace = true, features = ["bincode"] }
