[package]
name = "ethereum-lc-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/wormhole-foundation/example-zk-light-clients"
repository = "https://github.com/wormhole-foundation/example-zk-light-clients"

[dependencies]
anyhow = { workspace = true }
bls12_381 = { workspace = true, features = ["experimental"] }
getset = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }