[package]
name = "ethereum-lc-core"
version = "0.1.0"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
homepage = "https://github.com/wormhole-foundation/example-zk-light-clients"

[dependencies]
anyhow = { workspace = true }
bls12_381 = { workspace = true, features = ["experimental"] }
getset = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
