[package]
name = "ethereum-lc-core"
version = "0.1.0"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
homepage = "https://github.com/wormhole-foundation/example-zk-light-clients"

[dependencies]
anyhow = { workspace = true }
bls12_381 = { workspace = true, features = ["experimental"] }
hex = { workspace = true }
getset = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tiny-keccak = { workspace = true, features = ["keccak"] }

[dev-dependencies]
ethereum-types = { workspace = true }
ssz_types = { workspace = true, features = ["arbitrary"] }
tree_hash = { workspace = true }
tree_hash_derive = { workspace = true }