[package]
name = "ethereum-lc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
ethereum_serde_utils = { workspace = true }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
getset = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
# LC crates
ethereum-lc-core = { path = "../core" }
ethereum-programs = { path = "../ethereum-programs" }

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server_primary"
path = "src/bin/server_primary.rs"

[[bin]]
name = "server_secondary"
path = "src/bin/server_secondary.rs"