[package]
name = "ethereum-lc"
version = "0.1.0"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
getset = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
# LC crates
ethereum-lc-core = { path = "../core" }
ethereum-programs = { path = "../ethereum-programs" }
# Sphinx crates
sphinx-sdk = { workspace = true }

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server_primary"
path = "src/bin/server_primary.rs"

[[bin]]
name = "server_secondary"
path = "src/bin/server_secondary.rs"

[[bench]]
name = "committee_change"
harness = false
