[package]
name = "ethereum-lc"
version = "1.0.1"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
ethers-core = { workspace = true }
getset = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
# LC crates
ethereum-lc-core = { path = "../core" }
ethereum-programs = { path = "../ethereum-programs" }
# Sphinx crates
sphinx-sdk = { workspace = true }

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "proof_server"
path = "src/bin/proof_server.rs"

[[bench]]
name = "committee_change"
harness = false

[[bench]]
name = "inclusion"
harness = false

[features]
ethereum = ["ethereum-lc-core/ethereum"]
