[package]
name = "kadena-lc-core"
version = "0.0.1"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
sha2 = { workspace = true }
getset = { workspace = true }
base64 = { workspace = true }
uint = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
kadena = []
