[package]
name = "kadena-lc-core"
version = "0.0.1"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
blake2 = { workspace = true }
chrono = { workspace = true }
getset = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
uint = { workspace = true }

[features]
default = []
kadena = []
