[package]
name = "kadena-lc"
version = "0.0.1"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
sha2 = { workspace = true }

# LC crates
kadena-lc-core = { path = "../core" }
kadena-programs = { path = "../kadena-programs" }

# Sphinx crates
sphinx-sdk = { workspace = true }