[workspace]
[package]
version = "1.0.0"
name = "epoch-change-program"
edition = "2021"
license = "BUSL-1.1"

[dependencies]
aptos-lc-core = { path = "../../core", package = "aptos-lc-core", default-features = false }
sphinx-zkvm = { git = "ssh://git@github.com/lurk-lab/sphinx", tag = "v1.0.0" }

[patch.crates-io]
# Sphinx patch
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-v0.10.8" }
