[workspace]
[package]
version = "1.1.0"
name = "epoch-change-program"
edition = "2021"
license = "Apache-2.0"

[dependencies]
aptos-lc-core = { path = "../../core", package = "aptos-lc-core", default-features = false }
sphinx-zkvm = { git = "https://github.com/argumentcomputer/sphinx", branch = "forward_ports_44" }

[patch.crates-io]
# Sphinx patch
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-v0.10.8" }
