[workspace]
[package]
version = "0.1.0"
name = "merkle-program"
edition = "2021"

[dependencies]
aptos-lc-core = { path = "../../core", package = "aptos-lc-core", default-features = false }
wp1-zkvm = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev" }

[patch.crates-io]
# WP1 patch
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-v0.10.8" }
