[package]
version = "0.1.0"
name = "signature-verification-program"
edition = "2021"

[dependencies]
aptos-lc-core = { path = "../../core", package = "aptos-lc-core", default-features = false }
wp1-derive = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev", package = "wp1-derive" }
wp1-zkvm = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev", package = "wp1-zkvm" }