[package]
version = "1.0.0"
name = "fixture-generator"
edition = "2021"

[[bin]]
name = "generate-fixture"
path = "src/bin/main.rs"

[dependencies]
sphinx-sdk = { workspace = true }
sphinx-prover = {workspace = true }
aptos-lc = { path = "../../light-client", features = ["aptos"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
alloy-sol-types = "0.7.2"
